Finish last thing in html and css

--- a/index.html
+++ b/index.html
@@ -55,13 +55,22 @@
                 <h5>-Thor, God of Thunder</h5>
             </div>
             <div class="contact-us">
-                <h4>Call to action! It's time!</h4>
-                <p>Sign up for our product by clicking that button right over there!<button>Sign up</button></p>
+                <div class="blue-section">
+                    <div class="left-blue-section">
+                        <h3>Call to action! It's time!</h3>
+                        <p class="p-last">Sign up for our product by clicking that button right over there!</p>
+                    </div>
+                    <div class="right-blue-section">
+                        <button type="button" class="right-btn">Sign up</button>
+                    </div>
+                    
+                </div>
             </div>
         </main>
 
         <footer>
             <!-- footer goes here-->
+            <p class="ftr-p"> Copyright&copy; Om Namah Shivay </p>
         </footer>
     </body>
 </html>
